Add debouncing, pagination, lazy loading, and reset filter

--- a/src/App.css
+++ b/src/App.css
@@ -22,8 +22,8 @@
 }
 
 .productImage img {
-  width: 100%;
-  height: auto;
+  width: 200px;
+  height: 350px;
   object-fit: contain;
   border-radius: 4px;
 }
@@ -118,4 +118,17 @@
   font-size: 16px;
   border-radius: 4px;
   border: 1px solid #ccc;
+}
+
+.pg-btn {
+  background-color: black;
+  color: white;
+  padding: 3px 12px;
+  border-radius: 3px;
+  cursor: pointer;
+}
+.active {
+  color: black;
+  background-color: white;
+  border: 1px solid rgb(46, 45, 45);
 }
